--- a/clothing_sale2/pom.xml
+++ b/clothing_sale2/pom.xml
@@ -12,6 +12,16 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+    	<groupId>mysql</groupId>
+    	<artifactId>mysql-connector-java</artifactId>
+    	<version>5.1.39</version>
+    </dependency>
+    <dependency>
+    	<groupId>com.google.code.gson</groupId>
+    	<artifactId>gson</artifactId>
+    	<version>2.2.4</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>clothing_sale</finalName>
