--- a/clothing_sale2/src/main/webapp/WEB-INF/web.xml
+++ b/clothing_sale2/src/main/webapp/WEB-INF/web.xml
@@ -18,4 +18,25 @@
     <servlet-name>mvc</servlet-name>
     <url-pattern>*.do</url-pattern>
   </servlet-mapping>
+  
+   <!-- 配置国际化监听器和字符集设置 -->
+  <context-param>
+    	<param-name>contextConfigLocation</param-name>
+    	<param-value>classpath:beans.xml</param-value>
+    </context-param>
+    <listener>
+    	<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    </listener>
+  <filter>
+        <filter-name>characterEncodingFilter</filter-name>
+        <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+        <init-param>
+            <param-name>encoding</param-name>
+            <param-value>UTF-8</param-value>
+        </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>characterEncodingFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 </web-app>
