--- a/clothing_sale2/pom.xml
+++ b/clothing_sale2/pom.xml
@@ -22,6 +22,11 @@
     	<artifactId>gson</artifactId>
     	<version>2.2.4</version>
     </dependency>
+    <dependency>
+    	<groupId>javax.mail</groupId>
+    	<artifactId>mail</artifactId>
+    	<version>1.4.7</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>clothing_sale</finalName>
