--- a/clothing_sale2/.settings/org.eclipse.core.resources.prefs
+++ b/clothing_sale2/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,7 @@
 eclipse.preferences.version=1
 encoding//src/main/java=UTF-8
 encoding//src/main/resources=UTF-8
+encoding//src/main/resources/language_en_US.properties=UTF-8
+encoding//src/main/resources/language_zh_CN.properties=UTF-8
+encoding//src/main/webapp/footer.jsp=UTF-8
 encoding/<project>=UTF-8
